@@ -71,14 +71,17 @@
             <version>3.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-browserstack</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 
 <profiles>
     <profile>
-        <id>screenplay</id>
-        <properties>
-            <serenity.test.root>net.serenitybdd.demos.todos.screenplay.features</serenity.test.root>
-        </properties>
+        <id>local</id>
         <build>
             <plugins>
                 <plugin>
@@ -86,7 +89,7 @@
                     <version>2.18.1</version>
                     <configuration>
                         <includes>
-                            <include>**/screenplay/**/*.java</include>
+                            <include>**/testsuites/*.java</include>
                         </includes>
                         <systemPropertyVariables>
                             <serenity.test.root>${serenity.test.root}</serenity.test.root>
@@ -104,8 +107,38 @@
             </plugins>
         </build>
     </profile>
-</profiles>
 
+        <profile>
+            <id>single</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <includes>
+                                <include>**/screenplay/**/*.java</include>
+                            </includes>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <systemPropertyVariables>
+                                <environment>single</environment>
+                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
+                            </systemPropertyVariables>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+</profiles>
 
     <build>
         <plugins>
